Fix: Fixed bugs with responsiveness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+
+
 body {
   background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
   width: 1440px;
@@ -12,6 +14,7 @@ body {
 ul {
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 
 .header-nav {
@@ -410,16 +413,18 @@ footer ul {
 
   .header-nav {
     max-width: 375px;
+    display: block;
     margin: 4px;
+    text-align: center;
   }
-
-  .nav-link, 
-  .nav-button {
-    display: none;
+  .nav-link ul {
+    display: block;
+    margin-bottom: 20px;
   }
 
   .header-hero {
     display: block;
+    text-align: center;
   }
 
   .header-hero-inner {
@@ -427,7 +432,11 @@ footer ul {
     margin-right: 2px;
     max-width: 370px;
     margin-bottom: 20px;
-    text-align: center;
+  }
+
+  .header-img-grid {
+    width: 60%;
+    margin: 0;
   }
 
   .search input {
@@ -468,38 +477,33 @@ footer ul {
   }
 
   footer {
-    max-width: 375px;
-    padding: 2px;
-    text-align: center;
     position: relative;
     top: 2700px;
     left: 0;
   }
 
-  .footer-top {
-    display: block;
-    padding: 0;
+  .footer-top h2 {
+    width: 60%;
+    margin: 50px auto;
   }
 
   .footer-top p {
-    max-width: 80%;
-    padding-left: 55px;
+    width: 60%;
+    margin: 0 auto;
+  }
+
+  .footer-top button {
+    width: 40%;
+    margin: 25px 120px;
   }
 
   .foot-img1 {
-    max-width: 370px;
-  }
-
-  .footer-top h2 {
-    margin-top: 4px;
-  }
-
-  .footer-top p{
-    margin-left: 2px;
-    margin-right: 2px;
+    width: 80%;
+    padding-left: 30px;
   }
 
   .footer-bottom {
+    text-align: center;
     flex-direction: column-reverse;
     padding: 0;
   }
@@ -512,6 +516,14 @@ footer ul {
     width: 40%;
     margin: auto;
 
+  }
+
+  .modal-content {
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    left: 5px;
+    top: 30px;
   }
 
 }
